--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,10 @@
     <title>Jeopardy</title>
   </head>
   <body>
-<div class="container"></div>
+<div id="container"></div>
+
+
+
 <script src="main.js"></script>
   </body>
 </html>
